--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.16",
+    "@auth/mongodb-adapter": "^2.0.3",
+    "@sanity/dashboard": "^3.1.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.20.2",
+    "@stripe/stripe-js": "^2.4.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.5",
-    "next": "13.5.5",
-    "postcss": "8.4.31",
+    "flowbite": "^2.0.0",
+    "flowbite-react": "^0.6.4",
+    "mongodb": "^6.2.0",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.5",
+    "next-sanity": "^5.5.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "sanity": "^3.20.2",
+    "sanity-plugin-media": "^2.2.5",
+    "stripe": "^13.11.0",
+    "styled-components": "^6.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
