--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "eslint": "8.51.0",
-    "eslint-config-next": "13.5.5",
+    "eslint-config-next": "^14.1.3",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "mongodb": "^6.2.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.5",
     "next-sanity": "^5.5.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanity": "^3.20.2",
     "sanity-plugin-media": "^2.2.5",
     "stripe": "^13.11.0",
