--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@sanity/vision": "^3.20.2",
     "@stripe/stripe-js": "^2.4.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.32.1",
+    "@tanstack/react-query-devtools": "^5.32.1",
+    "@tanstack/react-query-next-experimental": "^5.32.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
