--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-next-experimental": "^5.32.1",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "eslint": "8.51.0",
     "eslint-config-next": "^14.1.3",
@@ -38,6 +39,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "html-loader": "^5.0.0",
+    "mock-aws-s3": "^4.0.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
   }
