--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@tanstack/react-query": "^5.32.1",
     "@tanstack/react-query-devtools": "^5.32.1",
     "@tanstack/react-query-next-experimental": "^5.32.1",
+    "@typescript-eslint/parser": "^7.2.0",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "eslint": "8.51.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
